--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.20.7",
+    "@turf/turf": "^7.2.0",
     "firebase": "^12.5.0",
     "leaflet": "^1.9.4",
     "leaflet-geosearch": "^4.2.2",
